--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,8 @@ Encoding: UTF-8
 LazyData: true
 url: https://github.com/gabrielcrepeault/xgbmr
 RoxygenNote: 6.1.1
+Imports:
+    tidyverse,
+    xgboost,
+    mlr,
+    iml
