--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,6 @@ pandoc: '2.6'
 pkgdown: 1.4.1
 pkgdown_sha: ~
 articles:
+  entrainement_modeles: entrainement_modeles.html
   implementation: implementation.html
 
